--- a/var/www/index.html
+++ b/var/www/index.html
@@ -273,8 +273,8 @@
                             sessionStorage.setItem('sessionId', newSessionId);
                         }
                         
-                        // Redirect to instructions page
-                        window.location.href = 'instructions.html';
+                        // Redirect to test page
+                        window.location.href = 'test.html';
                     } else {
                         throw new Error(result.message || 'Submission failed. Please try again.');
                     }
