--- a/var/www/test.html
+++ b/var/www/test.html
@@ -300,8 +300,13 @@
         <div id="startScreen" class="screen">
             <div class="container">
                 <h1>NeuroNet Temporal Processing Test</h1>
-                <p>This test consists of 6 different tests with 15 trials each.</p>
-                <p>Click the button below to begin.</p>
+                <p style="text-align: center; font-weight: bold; margin: 20px 0;">Tap the picture of the sound you hear</p>
+                <div style="text-align: center; margin: 20px 0;">
+                    <video width="600" height="200" autoplay loop muted playsinline style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                        <source src="https://assets.codepen.io/3364143/7b5d4d3b-4883-46e6-9d1a-917d2ac6bc21.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
                 <button id="startButton" class="btn">Start Test</button>
             </div>
         </div>
